examples/test/testpolicy8789.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8789
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key27: value18
      key17: value30
      key45: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value29
          key49: value18
          key12: value10
      podSelector:
        matchLabels:
          key23: value15
